--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,4 +14,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 27b83eaf940c1b14bc96a2133d7e828f
-          TIMEZONE: Asia/Korea
+          TIMEZONE: Asia/Seoul
